Added header enum, restructured some of the tests