@@ -13,7 +13,7 @@ class SendEmailRequestTests {
 	@Test
 	void testGettersAndSetters() {
 		final var request = new SendEmailRequest();
-		request.setSender(new Sender());
+		request.setSender(new SendEmailRequest.Sender());
 		request.setEmailAddress("someEmailAddress");
 		request.setSubject("someSubject");
 		request.setMessage("someMessage");
@@ -31,11 +31,15 @@ class SendEmailRequestTests {
 	@Test
 	void testBuilder() {
 		final var request = SendEmailRequest.builder()
-			.withSender(new Sender())
 			.withEmailAddress("someEmailAddress")
 			.withSubject("someSubject")
 			.withMessage("someMessage")
 			.withHtmlMessage("someHtmlMessage")
+			.withSender(SendEmailRequest.Sender.builder()
+				.withAddress("someAddress")
+				.withName("someName")
+				.withReplyTo("someReplyTo")
+				.build())
 			.withAttachments(List.of(
 				SendEmailRequest.Attachment.builder()
 					.withName("someName")
@@ -49,11 +53,16 @@ class SendEmailRequestTests {
 		assertThat(request.getSubject()).isEqualTo("someSubject");
 		assertThat(request.getMessage()).isEqualTo("someMessage");
 		assertThat(request.getHtmlMessage()).isEqualTo("someHtmlMessage");
+		assertThat(request.getSender()).satisfies(sender -> {
+			assertThat(sender.getName()).isEqualTo("someName");
+			assertThat(sender.getAddress()).isEqualTo("someAddress");
+			assertThat(sender.getReplyTo()).isEqualTo("someReplyTo");
+		});
 		assertThat(request.getAttachments()).satisfies(attachments -> {
 			assertThat(attachments).hasSize(1);
-			assertThat(attachments.get(0).getName()).isEqualTo("someName");
-			assertThat(attachments.get(0).getContent()).isEqualTo("someContent");
-			assertThat(attachments.get(0).getContentType()).isEqualTo("someContentType");
+			assertThat(attachments.getFirst().getName()).isEqualTo("someName");
+			assertThat(attachments.getFirst().getContent()).isEqualTo("someContent");
+			assertThat(attachments.getFirst().getContentType()).isEqualTo("someContentType");
 		});
 	}
 }
